[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Entities/Walker.gd" type="Script" id=1]
[ext_resource path="res://Assets/placeholder_mech.png" type="Texture" id=2]
[ext_resource path="res://Assets/Materials/Unshaded.tres" type="Material" id=3]

[sub_resource type="Shader" id=1]

code = "shader_type canvas_item;

void vertex()
{
	
}

void fragment()
{
	COLOR = texture(TEXTURE, UV);
	
	
	
	COLOR.rgb = COLOR.rgb * (1.0 - UV.x);
	//COLOR.b = COLOR.b * sin(TIME);
	
	if (COLOR.r > 0.3)
	{
		COLOR.r = 0.5
	}
	else
	{
		COLOR.r = 1.0
	}
}"

[sub_resource type="ShaderMaterial" id=2]

render_priority = 0
shader = SubResource( 1 )

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 64.0

[sub_resource type="CapsuleShape2D" id=4]

custom_solver_bias = 0.0
radius = 64.0
height = 1.0

[sub_resource type="StyleBoxFlat" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0, 0.470588, 1, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="StyleBoxFlat" id=6]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 0, 0, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border Width" ]

[node name="Walker" type="KinematicBody2D"]

position = Vector2( 565.09, 250.009 )
input_pickable = false
collision_layer = 2
collision_mask = 3
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]
max_shoot_angle = 60.0
health = 100
speed_walk = 128
speed_sprint = 512
rotation_speed_walk = 10
rotation_speed_sprint = 0.5
damage_melee = 10
damage_charge = 5
shove_stun_time = 2.0
crash_stun_time = 1.0
minimum_move_distance = 8

[node name="Sprite" type="Sprite" parent="." index="0"]

light_mask = 3
material = SubResource( 2 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

visible = false
shape = SubResource( 3 )

[node name="AudioMelee" type="AudioStreamPlayer2D" parent="." index="2"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="AudioRanged" type="AudioStreamPlayer2D" parent="." index="3"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="RightPunch" type="Area2D" parent="." index="4"]

position = Vector2( 64, 0 )
input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitoring = false
monitorable = false
collision_layer = 0
collision_mask = 3
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightPunch" index="0"]

shape = SubResource( 4 )

[node name="TimerMelee" type="Timer" parent="RightPunch" index="1"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[node name="TimerCharge" type="Timer" parent="." index="5"]

process_mode = 0
wait_time = 2.0
one_shot = true
autostart = false

[node name="HealthBar" type="ProgressBar" parent="." index="6"]

light_mask = 0
material = ExtResource( 3 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -64.09
margin_top = -84.009
margin_right = 63.91
margin_bottom = -68.009
rect_min_size = Vector2( 128, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = true
percent_visible = true
_sections_unfolded = [ "Material", "Rect", "Visibility" ]

[connection signal="body_entered" from="RightPunch" to="." method="_on_RightPunch_body_entered"]

[connection signal="timeout" from="RightPunch/TimerMelee" to="." method="_on_TimerMelee_timeout"]

[connection signal="timeout" from="TimerCharge" to="." method="_on_TimerCharge_timeout"]


